--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 id="texto">Mi cumpleaños es dentro de:</h1>
+  <h1 id="texto">Las tareas se entregan en:</h1>
 
   <div class="countdown-container">
     <div>
@@ -22,22 +22,6 @@
       <p id="horas">0</p>
       <span>Horas</span>
     </div>
-
-    <div>
-      <p id="minutos">0</p>
-      <span>Minutos</span>
-    </div>
-
-    <div>
-      <p id="segundos">0</p>
-      <span>Segundos</span>
-    </div>
-  </div>
-  <br>
-  <br> 
-  <p class="felicitaciones-texto" id="felicidades"></p> 
-  <div>
-    <img id="upcoming-img" class="nocolor-img" src="./imagenes/tarta.png" alt="upcoming-image">
   </div>
 </body>
 
