Cambio de código

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Cumpleaños</title>
+  <title>Entrega de Tareas</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="script.js" defer></script>
@@ -14,10 +14,13 @@
 
   <div class="countdown-container">
     <div>
+      <p id="meses">0</p>
+      <span>Meses</span>
+    </div>
+    <div>
       <p id="dias">0</p>
       <span>Días</span>
     </div>
-
     <div>
       <p id="horas">0</p>
       <span>Horas</span>
